--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,9 +1,30 @@
 .banner-xs{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   background-image: url("../images/banner.jpg");
   background-size: cover;
   background-position: center;
   height: calc(100vh - 100px);
-  background-color: green;
   width: 100vw;
   overflow: hidden;
+  padding: 0 10px;
+  .card{
+    background-color: red;
+    text-align: center;
+  }
+
+}
+.scroll-down{
+  
+  background-color: green;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  p{
+    color: white;
+    margin: 0;
+  }
+
+
 }
