--- a/css/style.css
+++ b/css/style.css
@@ -98,21 +98,23 @@ body {
   padding: 0 10px;
 }
 
-/* line 12, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .banner-xs .card {
   background-color: red;
   text-align: center;
+  margin: auto;
 }
 
-/* line 18, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 20, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .scroll-down {
   background-color: green;
   text-align: center;
   font-size: 20px;
   text-transform: uppercase;
+  margin: 0 auto;
 }
 
-/* line 24, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 26, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .scroll-down p {
   color: white;
   margin: 0;
