--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -9,18 +9,20 @@
   width: 100vw;
   overflow: hidden;
   padding: 0 10px;
+
   .card{
     background-color: red;
     text-align: center;
+    margin: auto;
   }
 
 }
 .scroll-down{
-  
   background-color: green;
   text-align: center;
   font-size: 20px;
   text-transform: uppercase;
+  margin: 0 auto;
   p{
     color: white;
     margin: 0;
