--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_container.scss */
-.container {
-  background-color: lightyellow;
-  width: 100vw;
-  height: auto;
-}
-
 /* line 2, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 * {
   box-sizing: border-box;
@@ -13,21 +6,17 @@
 /* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 body, h1, h2, h3 {
   margin: 0;
+  padding: 0;
 }
 
-/* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 a {
   text-decoration: none;
 }
 
-/* line 14, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 16, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 li {
   list-style-type: none;
-}
-
-/* line 18, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-body {
-  background-color: lightblue;
 }
 
 /* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
@@ -87,7 +76,6 @@ body {
 /* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .banner-xs {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   background-image: url("../images/banner.jpg");
   background-size: cover;
