--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,6 +4,8 @@
 }
 body, h1, h2, h3{
   margin: 0;
+  padding: 0;
+
 }
 ul{
 
@@ -15,6 +17,3 @@ li{
   list-style-type: none;
 }
 ///just visualize
-body{
-  background-color: lightblue;
-}
