--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import 'variables.scss';
-@import 'main.scss';
+@import 'projects.scss';
 @import 'container.scss';
 @import 'base.scss';
 @import 'nav.scss';
