--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -45,5 +45,8 @@
   transform: translate(0, -11px) rotate(45deg);
 }
 /////////////////////////////////////////////////
-//
+//navigation list hide by default
 //////////////////////////////////////////////////
+.navigation{
+  display: block;
+}
