--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,14 +6,25 @@ body, h1, h2, h3{
   margin: 0;
   padding: 0;
 
-}
-ul{
 
 }
-a{
+ul,a,li{
   text-decoration: none;
-}
-li{
   list-style-type: none;
+  color: black;
+
 }
+a:visited{
+  color: black;
+
+}
+a:hover{
+  text-decoration: underline;
+}
+
 ///just visualize
+.wrapper{
+  background-color: $background-color;
+
+  // background: linear-gradient(rgba(144, 244, 239, 1), rgba(100, 15, 30, 0.2));
+}
