--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,9 @@
 @import 'nav.scss';
 @import 'banner.scss';
 @import 'contact.scss';
+
+//media screen
+@import '576.scss';
+@import '768.scss';
+@import '992.scss';
+@import '1200.scss';
