--- a/scss/_1200.scss
+++ b/scss/_1200.scss
@@ -1,3 +1,10 @@
 @media (min-width: 1200px) {
-  /* … */
+  .container{
+    .projects-xs{
+
+      .project-card{
+        width: 20vw;
+      }
+    }
+  }
 }
