--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,14 @@
-$background-color: orange;
-$nav-font-size: 2rem;
+//wrapper background color
+$background-color: #f4a261;
+//navigation font size
+$nav-font-size: 2.2rem;
+//logo/ul/a/li background color / text color
+$logo-background-color: black;
+
+//projects card background background-color
+
+$project-background-color: #e9c46a;
+
+//get intouch background background-color
+
+$info-background-color: #2a9d8f;
