--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'nav.scss';
 @import 'banner.scss';
 @import 'contact.scss';
-
+@import 'form.scss';
 //media screen
 @import '576.scss';
 @import '768.scss';
