--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
 .projects-xs {
   display: flex;
@@ -10,9 +9,14 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 15px;
+  background-color: #e9c46a;
+  box-shadow: -1em 0 3em 0.2em #2a9d8f;
 }
 
-/* line 8, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
+/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
 .projects-xs .project-card img {
   width: 100%;
   height: auto;
@@ -24,32 +28,86 @@
   box-sizing: border-box;
 }
 
-/* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 9, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 body, h1, h2, h3 {
   margin: 0;
   padding: 0;
 }
 
-/* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 16, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 ul, a, li {
   text-decoration: none;
   list-style-type: none;
   color: black;
 }
 
-/* line 17, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 23, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 a:visited {
   color: black;
 }
 
-/* line 21, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 27, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 26, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+/* line 32, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
 .wrapper {
-  background-color: orange;
+  background-color: #f4a261;
+}
+
+/* line 37, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.info {
+  line-height: 1.5rem;
+  font-size: 12px;
+}
+
+/* line 41, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.coding {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 72vh;
+  font-size: 16px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 15px;
+  background-color: #e9c46a;
+  box-shadow: -0.2em 0 1em 0.1em #2a9d8f;
+}
+
+/* line 57, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.scheme {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: left;
+  height: auto;
+  font-size: 14px;
+  padding: 15px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 15px;
+  background-color: #e9c46a;
+  box-shadow: -0.2em 0 1em 0.1em #2a9d8f;
+}
+
+/* line 70, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.scheme a {
+  font-size: 24px;
+}
+
+/* line 73, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.scheme h1 {
+  margin: 15px;
+  text-align: center;
+}
+
+/* line 77, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
+.scheme p {
+  font-size: 16px;
 }
 
 /* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
@@ -75,7 +133,6 @@ a:hover {
 /* line 21, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
 .menu-xs {
   display: inline-block;
-  background-color: black;
   padding: 10px;
   margin: 10px;
   border-radius: 5px;
@@ -111,8 +168,8 @@ a:hover {
   display: none;
   width: 100vw;
   height: auto;
-  background-color: orange;
-  font-size: 2rem;
+  background-color: #f4a261;
+  font-size: 2.2rem;
   z-index: 1;
 }
 
@@ -126,14 +183,10 @@ a:hover {
   height: calc(100vh - 100px);
   overflow: hidden;
   padding: 0 10px;
+  border-radius: 0 0 0 55%;
 }
 
-/* line 10, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.banner-xs img {
-  opacity: 0.2;
-}
-
-/* line 15, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .banner-xs .card {
   text-align: center;
   margin: auto;
@@ -141,22 +194,23 @@ a:hover {
 
 /* line 19, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .banner-xs .card .card-inner {
-  background-color: grey;
-  border-radius: 5px;
-  color: white;
+  background-color: #e9c46a;
+  border-radius: 15px;
+  font-size: 24px;
+  color: black;
   padding: 100px 0;
+  box-shadow: -1em 0 5em 3em #f4a261;
 }
 
-/* line 28, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 31, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .scroll-down {
-  background-color: green;
   text-align: center;
-  font-size: 20px;
+  font-size: 2rem;
   text-transform: uppercase;
   margin: 0 auto;
 }
 
-/* line 34, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
+/* line 37, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
 .scroll-down p {
   color: white;
   margin: 0;
@@ -167,57 +221,128 @@ a:hover {
   display: flex;
   flex-direction: column;
   padding: 15px;
+  background-color: #e9c46a;
+  box-shadow: -1em 0 3em 0.2em #2a9d8f;
 }
 
-/* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
+/* line 7, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
+.contact-xs form {
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
 .contact-xs form > input, .contact-xs textarea {
   width: 100%;
   margin: 5px 0;
   font-size: 30px;
 }
 
-/* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
+/* line 18, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
 .contact-xs textarea {
   resize: vertical;
   font-size: 30px;
 }
 
+/* line 22, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
+.contact-xs .contact-form > .name-lastname > input {
+  margin: 5px 0;
+  font-size: 30px;
+  width: 100%;
+}
+
+/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_form.scss */
+.contact-xs {
+  border: 1px solid black;
+  border-radius: 20px;
+  margin: 15px;
+}
+
+/* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_form.scss */
+.contact-xs button {
+  font-size: 2rem;
+  border-radius: 5px;
+}
+
 @media (min-width: 576px) {
-  /* … */
+  /* line 2, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_576.scss */
+  .info {
+    line-height: 1.5rem;
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 768px) {
-  /* line 2, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  /* line 7, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
   .wrapper {
     display: flex;
   }
-  /* line 4, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  /* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
   .wrapper .nav-xs {
     justify-content: center;
     background-color: black;
     border-radius: 0 0 50% 0;
   }
-  /* line 8, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  /* line 23, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
   .wrapper .nav-xs .logo {
     margin: 50px;
   }
-  /* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  /* line 26, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
   .wrapper .nav-xs .menu-xs {
     display: none;
   }
-  /* line 14, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  /* line 31, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
   .wrapper .nav-xs .navigation {
     display: block;
     width: 300px;
   }
+  /* line 42, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
+  .wrapper .container .banner-xs {
+    height: 100vh;
+  }
 }
 
 @media (min-width: 992px) {
-  /* … */
+  /* line 3, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .projects-xs {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  /* line 8, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .projects-xs .project-card {
+    width: 30vw;
+  }
+  /* line 12, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .contact-xs {
+    display: flex;
+    flex-direction: row;
+  }
+  /* line 15, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .contact-xs .info {
+    border: 1px solid black;
+    border-radius: 20px 0 0 20px;
+    margin-right: 15px;
+    padding: 15px;
+  }
+  /* line 23, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .contact-xs form > .name-lastname {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  /* line 27, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
+  .container .contact-xs form > .name-lastname .in-name, .container .contact-xs form > .name-lastname .in-lastname {
+    width: 49%;
+  }
 }
 
 @media (min-width: 1200px) {
-  /* … */
+  /* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_1200.scss */
+  .container .projects-xs .project-card {
+    width: 20vw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
