--- a/scss/_992.scss
+++ b/scss/_992.scss
@@ -1,3 +1,33 @@
 @media (min-width: 992px) {
-  /* … */
+  .container{
+    .projects-xs{
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-around;
+      .project-card{
+        width: 30vw;
+      }
+    }
+    .contact-xs{
+      display: flex;
+      flex-direction: row;
+      .info{
+        border: 1px solid black;
+        border-radius: 20px 0 0 20px;
+        margin-right: 15px;
+        padding: 15px;
+        // background-color: $info-background-color;
+
+      }
+      form>.name-lastname{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        .in-name, .in-lastname{
+          width: 49%;
+        }
+      }
+    }
+  }
 }
