--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,20 +2,26 @@
 *{
   box-sizing: border-box;
 }
+html{
+  // font-family: 'Montserrat', sans-serif;
+
+}
 body, h1, h2, h3{
   margin: 0;
   padding: 0;
+
 
 
 }
 ul,a,li{
   text-decoration: none;
   list-style-type: none;
-  color: black;
+  color: $logo-background-color;
+
 
 }
 a:visited{
-  color: black;
+  color: $logo-background-color;
 
 }
 a:hover{
@@ -27,4 +33,49 @@ a:hover{
   background-color: $background-color;
 
   // background: linear-gradient(rgba(144, 244, 239, 1), rgba(100, 15, 30, 0.2));
+}
+.info{
+  line-height: 1.5rem;
+  font-size: 12px;
+}
+.coding{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 72vh;
+  font-size: 16px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 15px;
+  background-color: $project-background-color;
+  box-shadow: -0.2em 0 1em .1em $info-background-color;
+
+
+}
+.scheme{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: left;
+  height: auto;
+  font-size: 14px;
+  padding: 15px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 15px;
+  background-color: $project-background-color;
+  box-shadow: -0.2em 0 1em .1em $info-background-color;
+  a{
+    font-size: 24px;
+  }
+  h1{
+    margin: 15px;
+    text-align: center;
+  }
+  p{
+    font-size: 16px;
+  }
+
 }
