--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -2,14 +2,28 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
+  background-color: $project-background-color;
+  box-shadow: -1em 0 3em .2em $info-background-color;
+  form{
+    display: flex;
+    flex-direction: column;
+  }
   form>input, textarea{
     width: 100%;
     // line-height: 50px;
     margin: 5px 0;
     font-size: 30px;
   }
+
   textarea{
     resize: vertical;
     font-size: 30px;
   }
+  .contact-form>.name-lastname>input{
+    margin: 5px 0;
+    font-size: 30px;
+    width: 100%;
+
+  }
+  
 }
