--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
+    border: 1px solid black;
+    border-radius: 15px;
+    margin: 15px;
+    background-color: $project-background-color;
+    box-shadow: -1em 0 3em .2em $info-background-color;
     img{
       width: 100%;
       height: auto;
