--- a/scss/_768.scss
+++ b/scss/_768.scss
@@ -7,69 +7,35 @@
   .wrapper{
     display: flex;
 
-
-
-
       .nav-xs{
-
+        display: flex;
         justify-content: center;
         background-color: black;
         border-radius: 0 0 50% 0;
-
-
-
-
-
+        position: sticky;
+        top: 0;
         .logo{
           margin: 50px;
         }
         .menu-xs{
           display: none;
-
-
         }
         .navigation{
+          
           display: block;
           width: 300px;
-
-
-
         }
 
       }
       .container{
-
         .banner-xs{
           height: 100vh;
-
-
+        }
+        .contact-xs{
+          margin: 15px;
         }
       }
-    // .nav-xs{
-    //   justify-content: center;
-    //   background-color: black;
-    //   border-radius: 0 0 50% 0;
-    //   .logo{
-    //     margin: 50px;
-    //   }
-    //   .menu-xs{
-    //     display: none;
-    //   }
-    //   .navigation{
-    //     display: block;
-    //     border: 1px solid;
-    //     width: 250px;
-    //     line-height: 2rem;
-    //     font-size: 1.5rem;
-    //
-    //   }
-    // }
-    //
-    // .container{
-    //   .banner-xs{
-    //     height: 100vh;
-    //   }
-    // }
+
   }
 
 
