--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -20,9 +20,9 @@
       background-color: $project-background-color;
 
       border-radius: 15px;
-      font-size: 24px;
+      font-size: 20px;
       color: black;
-      padding: 100px 0;
+      padding: 100px 15px;
       box-shadow: -1em 0 5em 3em $background-color;
     }
   }
