--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -16,28 +16,32 @@
     margin: auto;
 
 
+
     .card-inner{
       background-color: $project-background-color;
-
       border-radius: 15px;
       font-size: 20px;
       color: black;
-      padding: 100px 15px;
+      padding: 1vh 15px;
       box-shadow: -1em 0 5em 3em $background-color;
     }
   }
 
 }
 .scroll-down{
-
   text-align: center;
   font-size: 2rem;
   text-transform: uppercase;
   margin: 0 auto;
+  padding-bottom: 5px;
   p{
     color: white;
     margin: 0;
+    &:hover{
+      transform: scale(1.2);
+    }
   }
+
 
 
 }
