--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -15,6 +15,10 @@
   font-size: 2rem;
   margin: 10px;
 }
+.logo>a{
+  color: white;
+  text-decoration: none;
+}
 ////////////////////////////////////////////
 //navigation
 ////////////////////////////////////////////
